Improve file loading, added ignoring files/dirs and improved search pattern

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "commander": "^2.15.1",
+    "glob": "^7.1.6",
     "ora": "^2.0.0",
     "rx-text-search": "^1.0.0"
   },
