--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
-    "test": "jest",
+    "test": "jest --config jest.config.ts --passWithNoTests",
     "semantic-release": "semantic-release"
   },
   "bin": {
@@ -64,9 +64,10 @@
     "@typescript-eslint/parser": "^2.15.0",
     "eslint": "^6.8.0",
     "husky": "^4.0.6",
-    "jest": "^24.9.0",
+    "jest": "^26.6.3",
     "semantic-release": "^17.0.0",
     "ts-jest": "^25.1.0",
+    "ts-node": "^9.1.1",
     "typescript": "^3.7.4"
   }
 }
